--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="keywords" content="developer, designer, web-designer, front-end-developer">
+    <meta name="keywords" content="Web Architect, Web Designer, Web Developer, Webmaster, Website builder, developer, designer, web-designer, front-end-developer">
     <meta name="Content-Language" content="english">
-    <meta name="description" content="Portfolio">
+    <meta name="description" content="Abhishek Kotnala - Full Stack Web Developer, Best in Web Based Application, SEO, Content Writing and Digital Marketing">
     <meta name="author" content="Abhishek Kotnala">
 
-    <title>Portfolio - Abhishek Kotnala</title>
+    <title>Abhishek Kotnala - Portfolio</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -71,11 +71,12 @@
                 <h1 class="mb-0">Abhishek
                     <span class="text-primary">Kotnala</span>
                 </h1>
-                <div class="subheading mb-5">1558 Highbrook Ave, Mississagua ON. L5M4V8· (519) 729-6094 ·
+                <div class="subheading mb-5">888 Blairholm Ave Mississauga. L5C 1G4· (519) 729-6094 ·
                     <a href="mailto:akkotnala1995@gmail.com">akkotnala1995@gmail.com</a>
                 </div>
                 <p class="lead mb-5">I'm a Web Developer and a Designer with a background in Computer Engineering. I've completed my Post Graduation in Web Design and Development at the Conestoga College.
-                    <br /> With a strong background in multiple web technologies, agile methodologies, databases, and modern API's, I like to know what’s new going on with technology and I am curious to find the root of the problems and turn that knowledge into a tangible solution. My objective as a web developer is to have a firm understanding of programming, planning and design.</p>
+                    <br /> With a strong background in multiple web technologies, agile methodologies, databases, and modern API's, I like to know what’s new going on with technology and I am curious to find the root of the problems and turn that knowledge into a tangible solution. My objective as a web developer is to have a firm understanding of programming, planning and design.
+                </p>
                 <div class="social-icons">
                     <a href="https://www.linkedin.com/in/akkotnala">
                         <i class="fab fa-linkedin-in"></i>
@@ -98,14 +99,24 @@
 
                 <div class="resume-item d-flex flex-column flex-md-row mb-5">
                     <div class="resume-content mr-auto">
+                        <h3 class="mb-0">Full-stack Web Developer</h3>
+                        <div class="subheading mb-3"><a href="https://admiralcreative.ca">Admiral Creative</a></div>
+                        <p>Developing E-commerce website and components that meet the quality and standard. Along with Digital Marketing.</p>
+                    </div>
+                    <div class="resume-date text-md-right">
+                        <span class="text-primary">JUNE 2021 – *</span>
+                    </div>
+                </div>
+                <div class="resume-item d-flex flex-column flex-md-row mb-5">
+                    <div class="resume-content mr-auto">
                         <h3 class="mb-0">Web Developer</h3>
                         <div class="subheading mb-3">Legend Tire</div>
                         <p>Developing E-commerce website and components that meet the quality and standard. Along with Digital Marketing.</p>
                     </div>
                     <div class="resume-date text-md-right">
-                        <span class="text-primary">JUNE 2020 – *</span>
+                        <span class="text-primary">JUNE 2020 – JUNE 2021</span>
                     </div>
-                </div>         
+                </div>
                 <div class="resume-item d-flex flex-column flex-md-row mb-5">
                     <div class="resume-content mr-auto">
                         <h3 class="mb-0">Web Developer</h3>
@@ -353,13 +364,17 @@
                 <div class="subheading mb-3">Workflow</div>
                 <ul class="fa-ul mb-0">
                     <li>
-                        <i class="fa-li fa fa-check"></i> Mobile-First, Responsive Design</li>
+                        <i class="fa-li fa fa-check"></i> Mobile-First, Responsive Design
+                    </li>
                     <li>
-                        <i class="fa-li fa fa-check"></i> Cross Browser Testing &amp; Debugging</li>
+                        <i class="fa-li fa fa-check"></i> Cross Browser Testing &amp; Debugging
+                    </li>
                     <li>
-                        <i class="fa-li fa fa-check"></i> Cross Functional Teams</li>
+                        <i class="fa-li fa fa-check"></i> Cross Functional Teams
+                    </li>
                     <li>
-                        <i class="fa-li fa fa-check"></i> Agile Development &amp; Scrum</li>
+                        <i class="fa-li fa fa-check"></i> Agile Development &amp; Scrum
+                    </li>
                 </ul>
             </div>
         </section>
@@ -382,11 +397,14 @@
                 <h2 class="mb-5">Awards &amp; Certifications</h2>
                 <ul class="fa-ul mb-0">
                     <li>
-                        <i class="fa-li fa fa-trophy text-warning"></i>United Nations RIO program: Organizing Committee Member of the United Nations RIO program held in Punjabi University.</li>
+                        <i class="fa-li fa fa-trophy text-warning"></i>United Nations RIO program: Organizing Committee Member of the United Nations RIO program held in Punjabi University.
+                    </li>
                     <li>
-                        <i class="fa-li fa fa-trophy text-warning"></i> AIESEC Chandigarh: Member of Marketing and OGV of AIESEC Chandigarh.</li>
+                        <i class="fa-li fa fa-trophy text-warning"></i> AIESEC Chandigarh: Member of Marketing and OGV of AIESEC Chandigarh.
+                    </li>
                     <li>
-                        <i class="fa-li fa fa-trophy text-warning"></i>Rotaract Club: Project Manager of Youth Rotaract Club -Engineering Wing, Punjabi University.</li>
+                        <i class="fa-li fa fa-trophy text-warning"></i>Rotaract Club: Project Manager of Youth Rotaract Club -Engineering Wing, Punjabi University.
+                    </li>
                 </ul>
             </div>
         </section>
@@ -647,8 +665,8 @@
                     </div>
                 </div>
             </div>
-        </div>        
-        
+        </div>
+
         <!-- Portfolio Modal 71-->
         <div class="portfolio-modal modal fade" id="portfolioModal71" tabindex="-1" role="dialog" aria-labelledby="portfolioModal71Label" aria-hidden="true">
             <div class="modal-dialog modal-xl" role="document">
