--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                     <div class="resume-content mr-auto">
                         <h3 class="mb-0">Full-stack Web Developer</h3>
                         <div class="subheading mb-3"><a href="https://admiralcreative.ca">Admiral Creative</a></div>
-                        <p>Developing E-commerce website and components that meet the quality and standard. Along with Digital Marketing.</p>
+                        <p>Full Stack Development,  Graphic Design, SEO, Marketing and Content writing of web application that meet the quality and standard.</p>
                     </div>
                     <div class="resume-date text-md-right">
                         <span class="text-primary">JUNE 2021 – *</span>
