--- a/index.html
+++ b/index.html
@@ -104,14 +104,14 @@
                         <p>Full Stack Development,  Graphic Design, SEO, Marketing and Content writing of web application that meet the quality and standard.</p>
                     </div>
                     <div class="resume-date text-md-right">
-                        <span class="text-primary">JUNE 2021 – *</span>
+                        <span class="text-primary">JULY 2021 – *</span>
                     </div>
                 </div>
                 <div class="resume-item d-flex flex-column flex-md-row mb-5">
                     <div class="resume-content mr-auto">
                         <h3 class="mb-0">Web Developer</h3>
                         <div class="subheading mb-3">Legend Tire</div>
-                        <p>Developing E-commerce website and components that meet the quality and standard. Along with Digital Marketing.</p>
+                        <p>Creating different E-commerce platforms for different stores to sell and showcase companies products. Responsible for creating, maintaining, expanding, and scaling web pages and web applications.</p>
                     </div>
                     <div class="resume-date text-md-right">
                         <span class="text-primary">JUNE 2020 – JULY 2021</span>
