--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                     <div class="resume-content mr-auto">
                         <h3 class="mb-0">Web Developer</h3>
                         <div class="subheading mb-3">Legend Tire</div>
-                        <p>Creating different E-commerce platforms for different stores to sell and showcase companies products. Responsible for creating, maintaining, expanding, and scaling web pages and web applications.</p>
+                        <p>Creating different E-commerce platforms for different stores to sell and showcase companies products. Developing and designing website and components that meet the quality and standard. Along with Digital Marketing.</p>
                     </div>
                     <div class="resume-date text-md-right">
                         <span class="text-primary">JUNE 2020 – JULY 2021</span>
